thirdparty/include/libs/raylib55/include/raylib.h

    typedef enum bool { false = 0, true = !false } bool;
typedef struct RLVector2 {
    float x;                
    float y;                
} RLVector2;
typedef struct RLImage {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} RLImage;
typedef struct RLCamera3D {
    RLVector3 position;       
    RLVector3 target;         
    RLVector3 up;             
    float fovy;             
    int projection;         
} RLCamera3D;
typedef RLCamera3D RLCamera;    
typedef enum {
    FLAG_VSYNC_HINT         = 0x00000040,   
    FLAG_FULLSCREEN_MODE    = 0x00000002,   
    FLAG_WINDOW_RESIZABLE   = 0x00000004,   
    FLAG_WINDOW_UNDECORATED = 0x00000008,   
    FLAG_WINDOW_HIDDEN      = 0x00000080,   
    FLAG_WINDOW_MINIMIZED   = 0x00000200,   
    FLAG_WINDOW_MAXIMIZED   = 0x00000400,   
    FLAG_WINDOW_UNFOCUSED   = 0x00000800,   
    FLAG_WINDOW_TOPMOST     = 0x00001000,   
    FLAG_WINDOW_ALWAYS_RUN  = 0x00000100,   
    FLAG_WINDOW_TRANSPARENT = 0x00000010,   
    FLAG_WINDOW_HIGHDPI     = 0x00002000,   
    FLAG_WINDOW_MOUSE_PASSTHROUGH = 0x00004000, 
    FLAG_BORDERLESS_WINDOWED_MODE = 0x00008000, 
    FLAG_MSAA_4X_HINT       = 0x00000020,   
    FLAG_INTERLACED_HINT    = 0x00010000    
} ConfigFlags;
typedef enum {
    KEY_NULL            = 0,        
    KEY_APOSTROPHE      = 39,       
    KEY_COMMA           = 44,       
    KEY_MINUS           = 45,       
    KEY_PERIOD          = 46,       
    KEY_SLASH           = 47,       
    KEY_ZERO            = 48,       
    KEY_ONE             = 49,       
    KEY_TWO             = 50,       
    KEY_THREE           = 51,       
    KEY_FOUR            = 52,       
    KEY_FIVE            = 53,       
    KEY_SIX             = 54,       
    KEY_SEVEN           = 55,       
    KEY_EIGHT           = 56,       
    KEY_NINE            = 57,       
    KEY_SEMICOLON       = 59,       
    KEY_EQUAL           = 61,       
    KEY_A               = 65,       
    KEY_B               = 66,       
    KEY_C               = 67,       
    KEY_D               = 68,       
    KEY_E               = 69,       
    KEY_F               = 70,       
    KEY_G               = 71,       
    KEY_H               = 72,       
    KEY_I               = 73,       
    KEY_J               = 74,       
    KEY_K               = 75,       
    KEY_L               = 76,       
    KEY_M               = 77,       
    KEY_N               = 78,       
    KEY_O               = 79,       
    KEY_P               = 80,       
    KEY_Q               = 81,       
    KEY_R               = 82,       
    KEY_S               = 83,       
    KEY_T               = 84,       
    KEY_U               = 85,       
    KEY_V               = 86,       
    KEY_W               = 87,       
    KEY_X               = 88,       
    KEY_Y               = 89,       
    KEY_Z               = 90,       
    KEY_LEFT_BRACKET    = 91,       
    KEY_BACKSLASH       = 92,       
    KEY_RIGHT_BRACKET   = 93,       
    KEY_GRAVE           = 96,       
    KEY_SPACE           = 32,       
    KEY_ESCAPE          = 256,      
    KEY_ENTER           = 257,      
    KEY_TAB             = 258,      
    KEY_BACKSPACE       = 259,      
    KEY_INSERT          = 260,      
    KEY_DELETE          = 261,      
    KEY_RIGHT           = 262,      
    KEY_LEFT            = 263,      
    KEY_DOWN            = 264,      
    KEY_UP              = 265,      
    KEY_PAGE_UP         = 266,      
    KEY_PAGE_DOWN       = 267,      
    KEY_HOME            = 268,      
    KEY_END             = 269,      
    KEY_CAPS_LOCK       = 280,      
    KEY_SCROLL_LOCK     = 281,      
    KEY_NUM_LOCK        = 282,      
    KEY_PRINT_SCREEN    = 283,      
    KEY_PAUSE           = 284,      
    KEY_F1              = 290,      
    KEY_F2              = 291,      
    KEY_F3              = 292,      
    KEY_F4              = 293,      
    KEY_F5              = 294,      
    KEY_F6              = 295,      
    KEY_F7              = 296,      
    KEY_F8              = 297,      
    KEY_F9              = 298,      
    KEY_F10             = 299,      
    KEY_F11             = 300,      
    KEY_F12             = 301,      
    KEY_LEFT_SHIFT      = 340,      
    KEY_LEFT_CONTROL    = 341,      
    KEY_LEFT_ALT        = 342,      
    KEY_LEFT_SUPER      = 343,      
    KEY_RIGHT_SHIFT     = 344,      
    KEY_RIGHT_CONTROL   = 345,      
    KEY_RIGHT_ALT       = 346,      
    KEY_RIGHT_SUPER     = 347,      
    KEY_KB_MENU         = 348,      
    KEY_KP_0            = 320,      
    KEY_KP_1            = 321,      
    KEY_KP_2            = 322,      
    KEY_KP_3            = 323,      
    KEY_KP_4            = 324,      
    KEY_KP_5            = 325,      
    KEY_KP_6            = 326,      
    KEY_KP_7            = 327,      
    KEY_KP_8            = 328,      
    KEY_KP_9            = 329,      
    KEY_KP_DECIMAL      = 330,      
    KEY_KP_DIVIDE       = 331,      
    KEY_KP_MULTIPLY     = 332,      
    KEY_KP_SUBTRACT     = 333,      
    KEY_KP_ADD          = 334,      
    KEY_KP_ENTER        = 335,      
    KEY_KP_EQUAL        = 336,      
    KEY_BACK            = 4,        
    KEY_MENU            = 5,        
    KEY_VOLUME_UP       = 24,       
    KEY_VOLUME_DOWN     = 25        
} RLKeyboardKey;
typedef enum {
    CAMERA_CUSTOM = 0,              
    CAMERA_FREE,                    
    CAMERA_ORBITAL,                 
    CAMERA_FIRST_PERSON,            
    CAMERA_THIRD_PERSON             
} RLCameraMode;
typedef enum {
    CAMERA_PERSPECTIVE = 0,         
    CAMERA_ORTHOGRAPHIC             
} RLCameraProjection;
typedef enum {
    NPATCH_NINE_PATCH = 0,          
    NPATCH_THREE_PATCH_VERTICAL,    
    NPATCH_THREE_PATCH_HORIZONTAL   
} RLNPatchLayout;
typedef unsigned char *(*LoadFileDataCallback)(const char *fileName, int *dataSize);    
typedef bool (*SaveFileDataCallback)(const char *fileName, void *data, int dataSize);   
typedef char *(*LoadFileTextCallback)(const char *fileName);            
typedef bool (*SaveFileTextCallback)(const char *fileName, char *text); 
RLAPI void InitWindow(int width, int height, const char *title);  
RLAPI void CloseWindow(void);                                     
RLAPI bool WindowShouldClose(void);                               
RLAPI bool IsWindowReady(void);                                   
RLAPI bool IsWindowFullscreen(void);                              
RLAPI bool IsWindowHidden(void);                                  
RLAPI bool IsWindowMinimized(void);                               
RLAPI bool IsWindowMaximized(void);                               
RLAPI bool IsWindowFocused(void);                                 
RLAPI bool IsWindowResized(void);                                 
RLAPI bool IsWindowState(unsigned int flag);                      
RLAPI void SetWindowState(unsigned int flags);                    
RLAPI void ClearWindowState(unsigned int flags);                  
RLAPI void ToggleFullscreen(void);                                
RLAPI void ToggleBorderlessWindowed(void);                        
RLAPI void MaximizeWindow(void);                                  
RLAPI void MinimizeWindow(void);                                  
RLAPI void RestoreWindow(void);                                   
RLAPI void SetWindowIcon(RLImage image);                            
RLAPI void SetWindowIcons(RLImage *images, int count);              
RLAPI void SetWindowTitle(const char *title);                     
RLAPI void SetWindowPosition(int x, int y);                       
RLAPI void SetWindowMonitor(int monitor);                         
RLAPI void SetWindowMinSize(int width, int height);               
RLAPI void SetWindowMaxSize(int width, int height);               
RLAPI void SetWindowSize(int width, int height);                  
RLAPI void SetWindowOpacity(float opacity);                       
RLAPI void *GetWindowHandle(void);                                
RLAPI int GetScreenWidth(void);                                   
RLAPI int GetScreenHeight(void);                                  
RLAPI int GetRenderWidth(void);                                   
RLAPI int GetRenderHeight(void);                                  
RLAPI int GetMonitorCount(void);                                  
RLAPI int GetCurrentMonitor(void);                                
RLAPI RLVector2 GetMonitorPosition(int monitor);                    
RLAPI int GetMonitorWidth(int monitor);                           
RLAPI int GetMonitorHeight(int monitor);                          
RLAPI int GetMonitorPhysicalWidth(int monitor);                   
RLAPI int GetMonitorPhysicalHeight(int monitor);                  
RLAPI int GetMonitorRefreshRate(int monitor);                     
RLAPI RLVector2 GetWindowPosition(void);                            
RLAPI RLVector2 GetWindowScaleDPI(void);                            
RLAPI const char *GetMonitorName(int monitor);                    
RLAPI void SetClipboardText(const char *text);                    
RLAPI const char *GetClipboardText(void);                         
RLAPI RLImage GetClipboardImage(void);                              
RLAPI void EnableEventWaiting(void);                              
RLAPI void DisableEventWaiting(void);                             
RLAPI void ShowCursor(void);                                      
RLAPI void HideCursor(void);                                      
RLAPI bool IsCursorHidden(void);                                  
RLAPI void EnableCursor(void);                                    
RLAPI void DisableCursor(void);                                   
RLAPI bool IsCursorOnScreen(void);                                
RLAPI void EndDrawing(void);                                      
RLAPI void UpdateCamera(RLCamera *camera, int mode);      