engine/thirdparty/raylib55.c3i


// RLCamera system modes
enum RLCameraMode : const int
{
    CUSTOM = 0,                  // RLCamera custom, controlled by user (UpdateCamera() does nothing)
    FREE,                    // RLCamera free mode
    ORBITAL,                 // RLCamera orbital, around target, zoom supported
    FIRST_PERSON,            // RLCamera first person
    THIRD_PERSON             // RLCamera third person
}

// RLCamera projection
enum RLCameraProjection : const int
{
    PERSPECTIVE = 0,             // Perspective projection
    ORTHOGRAPHIC             // Orthographic projection
}

// N-patch layout
enum RLNPatchLayout : const int
{
    NINE_PATCH = 0,              // Npatch layout: 3x3 tiles
    THREE_PATCH_VERTICAL,    // Npatch layout: 1x3 tiles
    THREE_PATCH_HORIZONTAL   // Npatch layout: 3x1 tiles
}

// Callbacks to hook some internal functions
// WARNING: This callbacks are intended for advance users
alias LoadFileDataCallback = fn char* (ZString fileName, CUInt* bytesRead); // FileIO: Load binary data
alias SaveFileDataCallback = fn bool(ZString fileName, void* data, CUInt bytesToWrite); // FileIO: Save binary data
alias LoadFileTextCallback = fn char*(ZString fileName); // FileIO: Load text data
alias SaveFileTextCallback = fn bool(ZString fileName, ZString text); // FileIO: Save text data

// Window-related functions
alias MonitorIndex @local = CInt;
fn void initWindow(CInt width, CInt height, ZString title) @cname("InitWindow");              // Initialize window and OpenGL context
fn void closeWindow() @cname("CloseWindow");                                              // Close window and unload OpenGL context
fn bool windowShouldClose() @cname("WindowShouldClose");                                  // Check if KEY_ESCAPE pressed or Close icon pressed
fn bool isWindowReady() @cname("IsWindowReady");                                          // Check if window has been initialized successfully
fn bool isWindowFullscreen() @cname("IsWindowFullscreen");                                // Check if window is currently fullscreen
fn bool isWindowHidden() @cname("IsWindowHidden");                                        // Check if window is currently hidden (only PLATFORM_DESKTOP)
fn bool isWindowMinimized() @cname("IsWindowMinimized");                                  // Check if window is currently minimized (only PLATFORM_DESKTOP)
fn bool isWindowMaximized() @cname("IsWindowMaximized");                                  // Check if window is currently maximized (only PLATFORM_DESKTOP)
fn bool isWindowFocused() @cname("IsWindowFocused");                                      // Check if window is currently focused (only PLATFORM_DESKTOP)
fn bool isWindowResized() @cname("IsWindowResized");                                      // Check if window has been resized last frame
// NOTE(HM): this requires the window to be previously initialized
fn bool isWindowState(RLConfigFlag flag) @cname("IsWindowState");                           // Check if one specific window flag is enabled
fn void setWindowState(RLConfigFlag flag) @cname("SetWindowState");                         // Set window configuration state using flags (only PLATFORM_DESKTOP)
fn void clearWindowState(RLConfigFlag flags) @cname("ClearWindowState");                    // Clear window configuration state flags
// END NOTE(HM)
fn void toggleFullscreen() @cname("ToggleFullscreen");                                    // Toggle window state: fullscreen/windowed (only PLATFORM_DESKTOP)
fn void toggleBorderlessWindowed() @cname("ToggleBorderlessWindowed");			   // Toggle window state: borderless windowed (only PLATFORM_DESKTOP)
fn void maximizeWindow() @cname("MaximizeWindow");                                        // Set window state: maximized, if resizable (only PLATFORM_DESKTOP)
fn void minimizeWindow() @cname("MinimizeWindow");                                        // Set window state: minimized, if resizable (only PLATFORM_DESKTOP)
fn void restoreWindow() @cname("RestoreWindow");                                          // Set window state: not minimized/maximized (only PLATFORM_DESKTOP)
fn void setWindowIcon(RLImage image) @cname("SetWindowIcon");                               // Set icon for window (only PLATFORM_DESKTOP)
fn void setWindowIcons(RLImage* images, CInt count) @cname("SetWindowIcons");                // Set icon for window (multiple images, RGBA 32bit, only PLATFORM_DESKTOP)
fn void setWindowTitle(ZString title) @cname("SetWindowTitle");                             // Set title for window (only PLATFORM_DESKTOP)
fn void setWindowPosition(CInt x, CInt y) @cname("SetWindowPosition");                      // Set window position on screen (only PLATFORM_DESKTOP)
fn void setWindowMonitor(CInt monitor) @cname("SetWindowMonitor");             // Set monitor for the current window (fullscreen mode)
fn void setWindowMinSize(CInt width, CInt height) @cname("SetWindowMinSize");               // Set window minimum dimensions (for FLAG_WINDOW_RESIZABLE)
fn void setWindowMaxSize(CInt width, CInt height) @cname("SetWindowMaxSize");               // Set window maximum dimensions (for FLAG_WINDOW_RESIZABLE)
fn void setWindowSize(CInt width, CInt height) @cname("SetWindowSize");                     // Set window dimensions
fn void setWindowOpacity(float opacity) @cname("SetWindowOpacity");                       // Set window opacity [0.0f..1.0f] (only PLATFORM_DESKTOP)
fn void* getWindowHandle() @cname("GetWindowHandle");                                     // Get native window handle
fn CInt getScreenWidth() @cname("GetScreenWidth");                                         // Get current screen width
fn CInt getScreenHeight() @cname("GetScreenHeight");                                       // Get current screen height
fn CInt getRenderWidth() @cname("GetRenderWidth");                                         // Get current render width (it considers HiDPI)
fn CInt getRenderHeight() @cname("GetRenderHeight");                                       // Get current render height (it considers HiDPI)
fn CInt getMonitorCount() @cname("GetMonitorCount");                                       // Get number of connected monitors
fn MonitorIndex getCurrentMonitor() @cname("GetCurrentMonitor");                                   // Get current connected monitor
fn RLVector2 getMonitorPosition(MonitorIndex monitor) @cname("GetMonitorPosition");                  // Get specified monitor position
fn CInt getMonitorWidth(MonitorIndex monitor) @cname("GetMonitorWidth");                            // Get specified monitor width (max available by monitor)
fn CInt getMonitorHeight(MonitorIndex monitor) @cname("GetMonitorHeight");                          // Get specified monitor height (max available by monitor)
fn CInt getMonitorPhysicalWidth(MonitorIndex monitor) @cname("GetMonitorPhysicalWidth");            // Get specified monitor physical width in millimetres
fn CInt getMonitorPhysicalHeight(MonitorIndex monitor) @cname("GetMonitorPhysicalHeight");          // Get specified monitor physical height in millimetres
fn CInt getMonitorRefreshRate(MonitorIndex monitor) @cname("GetMonitorRefreshRate");                // Get specified monitor refresh rate
fn RLVector2 getWindowPosition() @cname("GetWindowPosition");                               // Get window position XY on monitor
//
fn RLVector2 getWindowScaleDPI() @cname("GetWindowScaleDPI");                               // Get window scale DPI factor ex: (1.0f, 1.0f) for 100% scale, (2.0f, 2.0f) for 200% scale, etc.
/*
Note(HM) GetWindowScaleDPI() function is only useful, if we want to manage DPI scale manually instead of in an automated way. 
(so the size of text and UI of our raylib application matches the rest of the desktop environment's text and UI sizes)
If FLAG_WINDOW_HIGHDPI is enabled, that's up to the backend to automatically rescale the size of the window's content 
to match the DPI scale of the display.
*/
fn ZString getMonitorName(MonitorIndex monitor) @cname("GetMonitorName");                          // Get the human-readable, UTF-8 encoded name of the primary monitor
fn void setClipboardText(ZString text) @cname("SetClipboardText");                        // Set clipboard text content
fn ZString getClipboardText() @cname("GetClipboardText");                                 // Get clipboard text content
fn RLImage getClipboardImage() @cname("GetClipboardImage");                                 // Get clipboard image content
fn void enableEventWaiting() @cname("EnableEventWaiting");                                // Enable waiting for events on EndDrawing(), no automatic event polling
fn void disableEventWaiting() @cname("DisableEventWaiting");                              // Disable waiting for events on EndDrawing(), automatic events polling

// Cursor-related functions
fn void showCursor() @cname("ShowCursor");                                                 // Shows cursor
fn void hideCursor() @cname("HideCursor");                                                 // Hides cursor
fn bool isCursorHidden() @cname("IsCursorHidden");                                        // Check if cursor is not visible
fn void enableCursor() @cname("EnableCursor");                                             // Enables cursor (unlock cursor)
fn void disableCursor() @cname("DisableCursor");                                           // Disables cursor (lock cursor)
fn bool isCursorOnScreen() @cname("IsCursorOnScreen");                                   // Check if cursor is on the screen
